[package]
authors = ["Amelorate <ameilorate2@gmail.com>"]
description = "Provides a game engine for byond-like tile based games like Space Station 13."
homepage = "http://buildstation.proboards.com/"
license = "MIT"
name = "buildengine5"
readme = "README.md"
repository = "https://github.com/Ameliorate/buildengine5"
version = "0.1.0"

[[bin]]
name = "buildengine5bin"
path = "src/bin.rs"

[dependencies]
bincode = "0.5.0"
byteorder = "0.4.2"
either = "0.1.6"
env_logger = "0.3.2"
lazy_static = "0.1.15"
log = "0.3.5"
mio = "0.5.0"
serde = "0.7.0"
serde_macros = "0.7.0"
slab = "0.1.3"

[lib]
name = "buildengine5lib"
path = "src/lib.rs"
